--- a/MSAUniApp/Web.config
+++ b/MSAUniApp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MSAUniAppContext" connectionString="Database=msauniapp;Data Source=us-cdbr-azure-southcentral-e.cloudapp.net;User Id=b4f0ed1aa6a3ba;Password=f06c25e3" 
+    <add name="MSAUniAppContext" connectionString="Database=TheVictorChangMySQL;Data Source=au-cdbr-azure-southeast-a.cloudapp.net;User Id=b3eb1fb096288a;Password=0ec9e83d" 
          providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
