--- a/MSAUniApp/MSAUniApp.csproj
+++ b/MSAUniApp/MSAUniApp.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Courseitem.cs" />
     <Compile Include="Models\Enrollment.cs" />
