--- a/MSAUniApp/MSAUniApp.csproj
+++ b/MSAUniApp/MSAUniApp.csproj
@@ -167,7 +167,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\201511231606545_InitialCreate.cs" />
+    <Compile Include="Migrations\201511231606545_InitialCreate.Designer.cs">
+      <DependentUpon>201511231606545_InitialCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Courseitem.cs" />
     <Compile Include="Models\Enrollment.cs" />
@@ -189,6 +192,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201511231606545_InitialCreate.resx">
+      <DependentUpon>201511231606545_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
